# coolttviz

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  coolttviz.opam  dune-project
cbits/: CMakeLists.txt  cimgui_extras.h  cube.c  fragment.glsl  imgui.ini  main.c  shader.c  shader.h
lib/: Hypercube.ml  Hypercube.mli  dune
resources/: shader.frag  shader.vert
src/: camera.rs  cube.rs  label.rs  linalg.rs  main.rs  messages.rs  render.rs  server.rs  system.rs  vertex.rs
src/support/: mod.rs
test/: dune
