[package]
name = "coolttviz-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { version = "0.29", default-features = true }
imgui = "0.7.0"
imgui-winit-support = "0.7.0"
imgui-glium-renderer = "0.7.0"
nalgebra = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[replace]
# We need to use the master of imgui-rs for WCHAR32 support as of 08/26/21
"imgui:0.7.0" = { git = 'https://github.com/imgui-rs/imgui-rs' }