opam-version: "2.0"
name: "coolttviz"
version: "0.0"
maintainer: "Reed Mullanix <rmullani@umn.edu>"
authors: ["The RedPRL Development Team"]
homepage: "https://github.com/RedPRL/coolttviz"
bug-reports: "https://github.com/RedPRL/coolttviz/issues"
dev-repo: "git+https://github.com/RedPRL/coolttviz.git"
synopsis: "Goal display for cooltt"
license: "Apache-2.0"
depends: [
  "glMLite"
  "containers" {>= "3.4"}
  "ezjsonm" {>= "1.2.0"}
  "uutf" {>= "1.0.2"}
]
pin-depends: [
  [ "ocaml_freetype.~main" "git+https://github.com/TOTBWF/ocaml-freetype" ]
  [ "cooltt.~serialize" "git+https://github.com/RedPRL/cooltt#serialize" ]
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]
